[package]
name = "rust_firepower"
version = "0.1.0"
authors = ["Shane Sexton <discrete@tachyon.cx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.6"
tokio = { version = "0.2.21", features = ["full"] }
uuid = { version = "0.8.1", features = ["v1"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"