[package]
name = "rust_firepower"
version = "0.1.0"
authors = ["Shane Sexton <discrete@tachyon.cx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.1"
chrono = "0.4.11"
http = "0.2"
hyper = "0.13.6"
hyper-tls = "0.4.1"
tokio = { version = "0.2.21", features = ["full"] }
uuid = { version = "0.8.1", features = ["v1"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"